# kiwimatecoder

./: .env.example  LICENSE  README.md  pyproject.toml
kiwimatecoder/: __init__.py  agent.py  ai.py  client.py  commands.py  config.py  main.py  media.py  permissions.py  prompts.py  providers.py  repl.py  session.py  updater.py
kiwimatecoder/tools/: __init__.py  base.py  edit_file.py  list_dir.py  paths.py  read_file.py  run_bash.py  search.py  write_file.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_edit.py  test_main.py  test_permissions.py  test_prompts.py  test_providers.py  test_repl.py  test_tools.py  test_updater.py
