[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kiwimatecoder"
version = "0.1.0"
description = "AI-powered coding assistant CLI. Bring your own API key."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.scripts]
kiwimatecoder = "kiwimatecoder.main:app"

[tool.setuptools.packages.find]
where = ["."]
